--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.3.1",
     "prettier-eslint": "^12.0.0",
     "sass": "^1.35.1",
+    "source-map-js": "^0.6.2",
     "stylus": "^0.54.8",
     "vite": "^2.3.7",
     "vite-plugin-components": "^0.11.2",
