--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "ant-design-vue": "^2.2.0-beta.4",
     "axios": "^0.21.1",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.9"
+    "vue-router": "^4.0.9",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
