--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/qq157788394/vite-antd-admin#readme",
   "dependencies": {
+    "@icon-park/vue-next": "^1.3.3",
     "@meforma/vue-copy-to-clipboard": "^0.0.1",
-    "ant-design-vue": "^2.2.0-beta.4",
+    "ant-design-vue": "^2.2.0-rc.1",
     "axios": "^0.21.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.9",
