--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@meforma/vue-copy-to-clipboard": "^0.0.1",
     "ant-design-vue": "^2.2.0-rc.1",
     "axios": "^0.21.1",
+    "element-plus": "^1.0.2-beta.54",
     "vue": "^3.0.5",
     "vue-router": "^4.0.9",
     "vuex": "^4.0.2",
@@ -48,6 +49,7 @@
     "vite": "^2.3.7",
     "vite-plugin-components": "^0.11.2",
     "vite-plugin-pages": "^0.13.2",
+    "vite-plugin-style-import": "^1.0.1",
     "vite-plugin-vue-layouts": "^0.3.1"
   }
 }
