--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
     "vite-plugin-pages": "^0.13.2",
     "vite-plugin-style-import": "^1.0.1",
     "vite-plugin-vue-layouts": "^0.3.1"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
